tests/ui/lifetimes/issue-34979.stderr
error[E0308]: mismatched types
  --> $DIR/issue-34979.rs:7:18
   |
LL |     &'static (): Foo;
   |                  ^^^ lifetime mismatch
   |
   = note: expected trait `<&'static () as Foo>`
              found trait `<&'a () as Foo>`
note: the lifetime `'a` as defined here...
  --> $DIR/issue-34979.rs:4:12
   |
LL | struct Ctx<'a>(&'a ())
   |            ^^
   = note: ...does not necessarily outlive the static lifetime

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
