tests/ui/lifetimes/issue-34979.rs
trait Foo {}
impl<'a, T> Foo for &'a T {}

struct Ctx<'a>(&'a ())
where
    &'a (): Foo,
    &'static (): Foo; //~ ERROR: mismatched types

fn main() {}
